Wrong new event time in "week view" after daylight savings transition
I'm running gnome-calendar from git master on Ubuntu 19.10.
If I click the week view to create a new event in the week following a daylight savings transition, then the new event's time is one hour off from the time I clicked. (This behavior is specific to the week view.)
For example, today is Mon Oct 28. Yesterday (Sun Oct 27) daylight savings time ended here in Central Europe. If I click the calendar to create a new event at 4 pm today, the new event dialog shows 3 pm. The same thing happens if I create a new event on any other day this week. But if I click to create an event during the previous or following week, then the proposed time is correct.